load external action from jar